--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -5,6 +5,11 @@ project(CPP-UI)
 set(CMAKE_CXX_STANDARD 20)
 set(CMAKE_CXX_STANDARD_REQUIRED True)
 
+INCLUDE_DIRECTORIES(
+  include
+)
+
 add_library(
     cpp-ui SHARED
+    source/ui.cpp
 )
